--- a/Particle Simulator.vcxproj
+++ b/Particle Simulator.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="shaderClass.h" />
     <ClInclude Include="VAO.h" />
     <ClInclude Include="VBO.h" />
+    <ClInclude Include="VertexGenerator.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default.frag" />
@@ -32,6 +33,8 @@
     <ClCompile Include="EBO.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="particle2DClass.cpp" />
+    <ClCompile Include="particle2DClass.h" />
     <ClCompile Include="shaderClass.cpp" />
     <ClCompile Include="VAO.cpp" />
     <ClCompile Include="VBO.cpp" />
