--- a/Particle Simulator.vcxproj.filters
+++ b/Particle Simulator.vcxproj.filters
@@ -22,12 +22,6 @@
     <Filter Include="Header Files\Graphics">
       <UniqueIdentifier>{5f6da452-544a-4612-86ad-c94bc9be456b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Util">
-      <UniqueIdentifier>{aaf6fd53-2208-49a7-954b-603136410c59}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Util">
-      <UniqueIdentifier>{bc930a06-985a-44b3-81be-24a30eb3e39b}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VBO.h">
@@ -41,6 +35,9 @@
     </ClInclude>
     <ClInclude Include="EBO.h">
       <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexGenerator.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +66,12 @@
     </ClCompile>
     <ClCompile Include="glad.c">
       <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="particle2DClass.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="particle2DClass.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
