--- a/Particle Simulator.vcxproj
+++ b/Particle Simulator.vcxproj
@@ -28,16 +28,18 @@
   <ItemGroup>
     <None Include="default.frag" />
     <None Include="default.vert" />
+    <None Include="particle2d.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EBO.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="particle2DClass.cpp" />
-    <ClCompile Include="particle2DClass.h" />
+    <ClInclude Include="particle2DClass.h" />
     <ClCompile Include="shaderClass.cpp" />
     <ClCompile Include="VAO.cpp" />
     <ClCompile Include="VBO.cpp" />
+    <ClCompile Include="VertexGenerator.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
