--- a/Particle Simulator.vcxproj.filters
+++ b/Particle Simulator.vcxproj.filters
@@ -39,12 +39,18 @@
     <ClInclude Include="VertexGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="particle2DClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="default.frag">
       <Filter>Resource Files\Shaders</Filter>
     </None>
     <None Include="default.vert">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="particle2d.vert">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
@@ -67,10 +73,10 @@
     <ClCompile Include="glad.c">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="particle2DClass.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="particle2DClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VertexGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
