--- a/Particle Simulator.vcxproj
+++ b/Particle Simulator.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EBO.h" />
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleSimulation.h" />
     <ClInclude Include="shaderClass.h" />
     <ClInclude Include="simulateStep.h" />
     <ClInclude Include="VAO.h" />
@@ -35,8 +37,10 @@
     <ClCompile Include="EBO.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="particle2DClass.cpp" />
     <ClInclude Include="particle2DClass.h" />
+    <ClCompile Include="ParticleSimulation.cpp" />
     <ClCompile Include="shaderClass.cpp" />
     <ClCompile Include="simulateStep.cpp" />
     <ClCompile Include="VAO.cpp" />
