--- a/Particle Simulator.vcxproj
+++ b/Particle Simulator.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EBO.h" />
+    <ClInclude Include="Grid.h" />
+    <ClInclude Include="GridSection.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleSimulation.h" />
     <ClInclude Include="shaderClass.h" />
